Added jar manifest

--- a/LifeGame/build.gradle
+++ b/LifeGame/build.gradle
@@ -13,3 +13,13 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+jar {
+    manifest {
+        attributes (
+                'Main-Class': 'ru.nsu.fit.g16203.voloshina.view.MainWindow'
+        )
+    }
+}
+
+
